refactor(blog): 更新图片显示样式并替换为本地资源，调整联系方式为项目地址

--- a/index.html
+++ b/index.html
@@ -81,12 +81,12 @@
             <h2 class="section-title">美好回忆</h2>
             <div class="memories-grid">
                 <div class="memory-card">
-                    <img src="https://trae-api-sg.mchost.guru/api/ide/v1/text_to_image?prompt=team%20celebration%20moment%2C%20happy%20people%20celebrating%2C%20bright%20and%20warm%20colors%2C%20modern%20photography%20style&image_size=landscape_4_3" alt="庆祝时刻">
+                    <img src="./images/gitcode.png" alt="庆祝时刻">
                     <h3>项目成功庆祝</h3>
                     <p>我们一起努力，终于完成了这个重要的项目！</p>
                 </div>
                 <div class="memory-card">
-                    <img src="https://trae-api-sg.mchost.guru/api/ide/v1/text_to_image?prompt=team%20brainstorming%20session%2C%20people%20discussing%20ideas%2C%20bright%20office%20lighting%2C%20collaborative%20atmosphere&image_size=landscape_4_3" alt="头脑风暴">
+                    <img src="./images/GroupPhoto.jpg" alt="头脑风暴">
                     <h3>创意头脑风暴</h3>
                     <p>每一次讨论都激发出新的火花和灵感。</p>
                 </div>
@@ -102,13 +102,13 @@
     <!-- 联系我们部分 -->
     <section id="contact" class="contact-section">
         <div class="container">
-            <h2 class="section-title">联系我们</h2>
+            <h2 class="section-title">项目地址</h2>
             <div class="contact-content">
                 <p>想要了解更多我们的故事？欢迎随时联系我们！</p>
                 <div class="contact-info">
                     <div class="contact-item">
-                        <span class="contact-label">邮箱：</span>
-                        <span class="contact-value">jdh20060417@gmail.com</span>
+                        <span class="contact-label">Github：</span>
+                        <span class="contact-value">https://github.com/jdhnsu/PptGame</span>
                     </div>
                     <!-- <div class="contact-item">
                         <span class="contact-label">电话：</span>
