--- a/game.html
+++ b/game.html
@@ -8,33 +8,33 @@
         /* 引入现代化游戏样式 */
         @import "blog-style.css";
         
-        /* 确保 Body 样式覆盖，使用 Flex 居中 */
+        /* 确保 Body 样式覆盖，使用 Flex 居中，统一与主页配色 */
         body {
             display: flex;
             justify-content: center;
             align-items: center;
             min-height: 100vh;
             margin: 0;
-            /* 柔和的明亮渐变背景 */
-            background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
+            /* 科技风格深色渐变背景，与主页英雄区协调 */
+            background: radial-gradient(circle at center, #0f172a 0%, #1e293b 100%);
             overflow: hidden;
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
         }
 
-        /* 返回首页按钮样式 */
+        /* 返回首页按钮样式 - 科技感设计 */
         .home-btn {
             position: fixed;
             top: 20px;
             left: 20px;
             z-index: 3000;
-            background: rgba(255, 255, 255, 0.9);
-            border: 1px solid rgba(0, 0, 0, 0.1);
+            background: rgba(255, 255, 255, 0.1);
+            border: 1px solid rgba(255, 255, 255, 0.2);
             padding: 10px 20px;
             border-radius: 30px;
             text-decoration: none;
-            color: #2c3e50;
+            color: #f8fafc;
             font-weight: 600;
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
             transition: all 0.3s ease;
             display: flex;
             align-items: center;
@@ -44,9 +44,10 @@
 
         .home-btn:hover {
             transform: translateY(-2px);
-            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
-            background: #fff;
-            color: #FF6B6B;
+            box-shadow: 0 8px 20px rgba(59, 130, 246, 0.4);
+            background: rgba(59, 130, 246, 0.8);
+            border-color: rgba(59, 130, 246, 0.6);
+            color: white;
         }
 
         .home-icon {
