--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>团队回忆录 - 我们的美好时光</title>
     <link rel="stylesheet" href="blog-style.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700;800;900&family=Space+Grotesk:wght@600;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <!-- 导航栏 -->
